--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "lucide-react": "^0.462.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "recharts": "^2.12.7",
