--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@uidotdev/usehooks": "^2.4.1",
     "clsx": "^2.1.1",
     "firebase": "^11.0.2",
+    "framer-motion": "^12.23.6",
     "lucide-react": "^0.462.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
